ansible/roles/master/kustomization/argocd/resources/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: argocd-https
  namespace: argocd
spec:
  entryPoints:
    - websecure
  tls:
    secretName: argocd-server-ssl
    certResolver: letsencrypt
  routes:
  - match: (Host(`argocd.hellston.com`))
    kind: Rule
    services:
    - name: argocd-server
      port: 443
